<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_black"
    android:orientation="vertical">

    <!-- toolbar row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/space_m">

        <ImageButton
            android:id="@+id/btn_gl_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/cd_back"
            android:src="@drawable/ic_arrow_back"
            app:tint="@color/white" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_s"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/gl_title"
                style="@style/TextAppearance.RandomWallpaper.CardTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gallery_manage_title" />

            <TextView
                android:id="@+id/gl_subtitle"
                style="@style/TextAppearance.RandomWallpaper.Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_galleries"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:padding="@dimen/space_m" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_new_gallery"
        style="@style/Widget.RandomWallpaper.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_l"
        android:text="@string/gallery_new" />

</LinearLayout>
